--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: WorldPlayerCount
-version: "1.0 by xXKHaLeD098Xx"
+version: "1.0-beta"
 api: 3.12.2
 author: xXKHaLeD098Xx
 main: Khaled\WorldPlayerCount
