--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: WorldPlayerCount
 version: "1.0-beta"
-api: 3.12.2
+api: [3.12.2, 3.12.1]
 author: xXKHaLeD098Xx
 main: Khaled\WorldPlayerCount
