Add the dependency

--- a/plugin.yml
+++ b/plugin.yml
@@ -2,4 +2,5 @@ name: WorldPlayerCount
 version: "1.0-beta"
 api: [3.12.2, 3.12.1]
 author: xXKHaLeD098Xx
+depend: [Slapper]
 main: xXKHaLeD098Xx\WorldPlayerCount\WorldPlayerCount
