--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: WorldPlayerCount
 version: "1.0-beta"
-api: [3.12.2, 3.12.1]
+api: [3.12.3]
 author: xXKHaLeD098Xx
 depend: [Slapper]
 main: xXKHaLeD098Xx\WorldPlayerCount\WorldPlayerCount
